sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:16: error: value test is not a member of Unit
possible cause: maybe a semicolon is missing before `value test'?
    }test=true
     ^